# Grevling

./: .gitignore  .readthedocs.yaml  404.html  Makefile  README.md  alembic.ini  index.html  mkdocs.yml  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  test.db  test.py
.github/workflows/: python-package.yml
badger/: __init__.py  __main__.py  plotting.py  render.py  schema.py  util.py
configuration/: index.html
devel/: 404.html  index.html  sitemap.xml
devel/configuration/: index.html
devel/search/: search_index.json
docs/: configuration.md  index.md
docs/source/: conf.py  getting-started.rst
grevling/: __init__.py  __main__.py  api.py  capture.py  context.py  db.py  filemap.py  grevling.gold  instance.py  parameters.py  plotting.py  render.py  schema.py  script.py  typing.py  util.py
grevling/migrations/versions/: v0_major_version_0.py  v1_major_version_1.py  v2_major_version_2.py
grevling/runner/: local.py
grevling/schema/: __init__.py  raw.py  refined.py
grevling/workflow/: __init__.py  azure.py  local.py
sett/: output.py
stubs/: fasteners.pyi
stubs/mako/: template.pyi
tests/: common.py  test_errors.py  test_features.py  test_migrate.py  test_parse.py  test_plots.py  test_plugins.py  test_run.py  test_state.py  test_typing.py
tests/data/run/: files.yaml
tests/data/run/capture/: grevling.gold
tests/data/run/cat/: grevling.gold
tests/data/run/docker/: grevling.gold
tests/data/run/echo/: grevling.gold
tests/data/run/failing/: badger.yaml  grevling.gold
tests/data/run/files/: grevling.gold
tests/data/run/folder/: grevling.gold
tests/data/run/migrate/grevlingdata/: state.json
tests/data/run/plot/: badger.yaml  grevling.gold
tests/data/run/sleep/: grevling.gold
tests/data/run/stdout/: badger.yaml  grevling.gold
tests/data/run/template-files/: grevling.gold
tests/data/run/workdir/: grevling.gold
tests/data/valid/: conditions.gold  diverse.gold  diverse.yaml
