[tool.black]
line-length = 88
target-version = ['py37']
skip-string-normalization = true

[tool.poetry]
name = "grevling"
version = "2.0.4"
description = "A batch runner tool"
authors = ["Eivind Fonn <eivind.fonn@sintef.no>"]
license = "AGPL3"
readme = "README.md"
include = ["grevling/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
asteval = "^0.9.31"
bidict = "^0.22.1"
click = "^8.1.7"
fasteners = "^0.19"
goldpy = "^2.1"
Mako = "^1.2.2"
numpy = "^1.24"
pandas = "^2.0"
pyarrow = "^14.0.1"
pydantic = "^2"
PyYAML = "^6.0.1"
rich = "^13.6.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.5"
mypy = "^1.7.0"
types-pyyaml = "^6.0.12.12"
pandas-stubs = "^2.1.1.230928"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.12"

[tool.poetry.group.matplotlib.dependencies]
matplotlib = "^3.7"

[tool.poetry.group.plotly.dependencies]
plotly = "^5.18.0"

[tool.poetry.scripts]
badger = "grevling.__main__:main"
grevling = "grevling.__main__:main"

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"

[[tool.mypy.overrides]]
module = "grevling.__main__,grevling.plotting,grevling.util,grevling.render,grevling.typing"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "fasteners"
ignore_missing_imports = true

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.bumpversion]
allow_dirty = false
commit = false
tag = false
parse = """(?x)
    (?P<major>[0-9]+)
    \\.(?P<minor>[0-9]+)
    \\.(?P<patch>[0-9]+)
    (?:
        (?P<pre_label>a|b|rc|stable)
        (?P<pre_number>[0-9]+)?
    )?
"""
serialize = [
    "{major}.{minor}.{patch}{pre_label}{pre_number}",
    "{major}.{minor}.{patch}",
]
message = "Bump version: {current_version} -> {new_version}"
tag_message = "Bump version: {current_version} -> {new_version}"
sign_tags = true

[tool.bumpversion.parts.pre_label]
optional_value = "stable"
values = [
    "a",
    "b",
    "rc",
    "stable",
]

[tool.bumpversion.parts.pre_number]
first_value = "1"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "grevling/__init__.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
