[project]
authors = [
    {name = "Eivind Fonn", email = "eivind.fonn@sintef.no"},
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "asteval<1.0.0,>=0.9.31",
    "bidict<1.0.0,>=0.22.1",
    "click<9.0.0,>=8.1.7",
    "fasteners<1.0,>=0.19",
    "goldpy<3.0,>=2.1",
    "Mako<2.0.0,>=1.2.2",
    "numpy<2.0,>=1.25",
    "pandas<3.0,>=2.0",
    "pyarrow<19,>=18",
    "pydantic<3,>=2",
    "PyYAML<7.0.0,>=6.0.1",
    "rich<14.0.0,>=13.6.0",
    "sqlalchemy<3.0.0,>=2.0.23",
    "alembic<2.0.0,>=1.12.1",
]
name = "grevling"
version = "3.0.0a3"
description = "A batch runner tool"
readme = "README.md"
license = {text = "AGPL3"}

[project.scripts]
badger = "grevling.__main__:main"
grevling = "grevling.__main__:main"

[project.optional-dependencies]
matplotlib = [
    "matplotlib<4.0,>=3.7",
]
plotly = [
    "plotly<6.0.0,>=5.18.0",
]

[tool.uv]
dev-dependencies = [
    "pytest<8.0.0,>=7.4.3",
    "ruff<1.0.0,>=0.1.5",
    "mypy<2.0.0,>=1.7.0",
    "types-pyyaml<7.0.0.0,>=6.0.12.12",
    "pandas-stubs<3.0.0.0,>=2.1.1.230928",
    "mkdocs<2.0.0,>=1.5.3",
    "mkdocs-material<10.0.0,>=9.4.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
files = ["grevling/**/*.py"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"

[[tool.mypy.overrides]]
module = "grevling.__main__,grevling.plotting,grevling.util,grevling.render,grevling.typing"
disallow_untyped_defs = false

[tool.ruff]
line-length = 110
include = ["grevling/**/*.py", "tests/**/*.py", "stubs/**/*.pyi"]

[tool.ruff.lint]
select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TCH",      # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "NPY",      # Some numpy-specific things
]
ignore = [
    "E741",     # Ambiguous variable name
    "UP007",    # Only if your project targets Python 3.9 or earlier
    "SIM115",   # Complains if we use __enter__ inside an __enter__ method
    "ISC001",   # Conflicts with rust formatting
    "TD003",    # Issue links for each todo comment
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.bumpversion]
allow_dirty = false
current_version = "3.0.0a3"
commit = false
tag = false
parse = """(?x)
    (?P<major>[0-9]+)
    \\.(?P<minor>[0-9]+)
    \\.(?P<patch>[0-9]+)
    (?:
        (?P<pre_label>a|b|rc|stable)
        (?P<pre_number>[0-9]+)?
    )?
"""
serialize = [
    "{major}.{minor}.{patch}{pre_label}{pre_number}",
    "{major}.{minor}.{patch}",
]
message = "Bump version: {current_version} -> {new_version}"
tag_message = "Bump version: {current_version} -> {new_version}"
sign_tags = true

[tool.bumpversion.parts.pre_label]
optional_value = "stable"
values = [
    "a",
    "b",
    "rc",
    "stable",
]

[tool.bumpversion.parts.pre_number]
first_value = "1"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "grevling/__init__.py"
